Update SideBarController.java